# svd_search_engine

./: .dockerignore  .gitignore  Dockerfile  Latent Semantic Analysis SVD.pptx  app.py  docker-compose.yml  functionality.md  generator.py  main.ipynb  main.py  movies_dataset.json  presentation.md  pyproject.toml  readme.md  requirements.txt  search_pipeline.py  streamlit_ui.py
configs/: config.yaml
data/: chenyanglim_imdb-v2.csv
notebooks/: main_v2.ipynb
pages/: 1_Process_Notebook_View.py  2_Real_Time_SVD_Demo.py  3_Presentation.py
scripts/: preprocess.py  train_model.py
src/svd_search/: __init__.py
src/svd_search/config/: paths.py
src/svd_search/data/: loader.py
src/svd_search/features/: build_features.py
src/svd_search/utils/: utils.py
tests/: test_search_engine.py
